Bug 638465 - Do not ignore inital documents. r=tbsaunde, a=lsblakk